Adição de descrição da localidade: Estado e pais

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="informacao-principal">
             <h1 id="cidade">Use a lupa acima para ver o clima em uma cidade</h1>
+            <p id="pais"></p>
 
             <p class="temperatura" id="temperatura"></p>
 
